# ilm-opa-cnf

./: Makefile  README.md
cnf/lst/: conf-validator.include.lst  csi-infra-conf.exclude.lst  csi-infra-conf.include.lst
dat/tmp/: .found-generate-docker-tasks
ilm-opa/: all.env.json  all.env.yaml  dev.env.json  dev.env.yaml  prd.env.json  prd.env.yaml  stg.env.json  stg.env.yaml
ilm-opa/all/006-individual-users/: users-new.json  users-new.yaml  users.json  users.yaml
ilm-opa/all/050-wireguard/: peers.json  peers.yaml
ilm-opa/all/report/: config.md
ilm-opa/all/tf/: 000-gcp-remote-bucket.backend-config.tfvars  000-gcp-remote-bucket.vars.tfvars  001-enable-gcp-services.backend-config.tfvars  001-enable-gcp-services.vars.tfvars  002-manual-secrets.backend-config.tfvars  002-manual-secrets.vars.tfvars
ilm-opa/dev/050-wireguard/: peers.json  peers.yaml
ilm-opa/dev/report/: config.md
ilm-opa/dev/sec/: creds.json  creds.yaml
ilm-opa/dev/tf/: 000-gcp-remote-bucket.backend-config.tfvars  000-gcp-remote-bucket.vars.tfvars  001-enable-gcp-services.backend-config.tfvars  001-enable-gcp-services.vars.tfvars  (+16 more)
lib/make/: install-img.func.mk  install-tpl-gen-img.func.mk  zip-me.func.mk
src/make/: docker-provisoning-tasks.mk  install-img-conf-validator.func.mk  install-user-group-automate.mk
src/python/conf-validator/: README.md  poetry.toml  pyproject.toml
src/python/conf-validator/Classes/: EnvEnum.py
src/python/conf-validator/EnvModels/: __init__.py  all.py  dev.py
src/python/conf-validator/conf_validator/: __init__.py  __main__.py  conf_validator.py
(+96 files in other folders)
