[tool.poetry]
name = "conf-validator"
version = "1.1.0"
description = "the conf-validator app should serve to validate the yaml of step configuration files"
authors = ["Yordan Georgiev <yordan.georgiev@csitea.net>"]
readme = "README.md"
packages = [{include = "conf_validator"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
rich = "^13.3.5"
pydantic = "^1.10.7"
pydantic-yaml = "^0.11.2"
pyyaml = "^6.0"
zipp = "3.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
validate = "conf_validator:app"
